--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zjy</groupId>
-    <artifactId>SpringMvcLearn</artifactId>
+    <artifactId>SpringMvcDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <modules>
+        <module>XmlMehtod</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -106,22 +109,7 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.4.16.v20190411</version>
-                <configuration>
-                    <webApp>
-                        <contextPath>/test</contextPath>
-                        <descriptor>${project.basedir}/src/main/resources/webapp/WEB-INF/web.xml</descriptor>
-                    </webApp>
-                    <httpConnector>
-                        <port>8081</port>
-                        <host>localhost</host>
-                    </httpConnector>
-                    <scanIntervalSeconds>1</scanIntervalSeconds>
-                </configuration>
-            </plugin>
+
 
         </plugins>
     </build>
