--- a/JavaConfigMethod/pom.xml
+++ b/JavaConfigMethod/pom.xml
@@ -23,11 +23,13 @@
                     <stopKey>foo</stopKey>
                     <stopPort>9999</stopPort>
                     <httpConnector> <!-- jetty端口 -->
-                        <port>9090</port>
+                        <port>8080</port>
                     </httpConnector>
                     <webApp>
                         <contextPath>/</contextPath>
+<!--                        <baseResource>src/main/webapp</baseResource>-->
                     </webApp>
+                    <webAppSourceDirectory>src/main/webapp</webAppSourceDirectory>
                 </configuration>
             </plugin>
             <plugin>
