--- a/XmlMehtod/pom.xml
+++ b/XmlMehtod/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>XmlMehtod</artifactId>
-
+    <packaging>war</packaging>
     <build>
         <plugins>
             <plugin>
@@ -19,11 +19,11 @@
                 <version>9.4.16.v20190411</version>
                 <configuration>
                     <webApp>
-                        <contextPath>/test</contextPath>
+                        <contextPath>/</contextPath>
                         <descriptor>${project.basedir}/src/main/resources/webapp/WEB-INF/web.xml</descriptor>
                     </webApp>
                     <httpConnector>
-                        <port>8081</port>
+                        <port>9090</port>
                         <host>localhost</host>
                     </httpConnector>
                     <scanIntervalSeconds>1</scanIntervalSeconds>
